# finagotchi

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  README.md  requirements.txt
backend/app/: config.py  dilemma_bank.py  docstrings.py  graph_fallback.py  inproc_llm.py  kuzu_adapter.py  llm_client.py  logging_setup.py  main.py  pet_store.py  qdrant_client.py  schemas.py
backend/scripts/: build_kuzu_from_qdrant.py  export_pet.py  kuzu_schema.py  qdrant_download_snapshots.py  qdrant_info.py  qdrant_restore_snapshots.py  smoke_models.py  verify_qdrant_dims.py
backend/tests/: test_api.py
docs/: API_OVERVIEW.md  DEPLOYMENT.md  DEPLOYMENT_DO_CPU.md  DEPLOYMENT_DO_GPU.md  LLAMA_CPP_SETUP.md
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/components/: Background.tsx  Choices.tsx  HoverText.tsx  Menu.tsx  Textarea.tsx  Window.tsx  WindowTextarea.tsx
frontend/constants/: base.ts  dilemmas.ts  evolutions.ts  morals.ts  objects.ts  sprites.ts
frontend/lib/: api.ts
infra/opentofu/: README.md  add_ssh_key.sh  deploy_after_tofu.sh  list_do_gpu_sizes.sh  list_do_images.sh  list_do_keys.sh  list_do_sizes.sh  list_do_vpcs.sh  load_env.sh  main.tf  outputs.tf  terraform.tfstate  variables.tf  versions.tf
scripts/: bootstrap_backend_gpu.sh  bootstrap_frontend_cpu.sh  kill_port.sh  run_llm_chat.sh  run_llm_embed.sh
(+35 files in other folders)
