[project]
name = "finagotchi"
version = "0.1.0"
description = "Finagotchi backend"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.30.6",
  "httpx==0.27.2",
  "pydantic==2.9.2",
  "qdrant-client==1.12.1",
  "python-dotenv==1.0.1",
  "kuzu==0.6.1",
  "llama-cpp-python==0.3.16",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "mypy",
  "pre-commit",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.app"]

[tool.ruff]
line-length = 100
